# BOTSRE

./: .gitignore  .replit  Alarms.py  BotScript.py  Counter.py  Data_Parser.py  Games.py  Img_Utils.py  Leaderboard_Parser.py  Meta_Add.py  Meta_Remove.py  README.md  SQB_Parser.py  SQ_Info.py  SQ_Info_Auto.py  Scoreboard.py  Searcher.py  permissions.py  pyproject.toml  replit.nix  requirements.txt
DATA/: Air.txt  CDK_to_Readable.csv  Ground.txt  Naval.txt
